@@ -40,7 +40,6 @@
 #include <iomanip>
 #include <algorithm>
 
-
 ScrollingList::ScrollingList( Configuration &c,
                               Page          &p,
                               bool           layoutMode,
@@ -64,7 +63,6 @@ ScrollingList::ScrollingList( Configuration &c,
  {
 }
 
-
 ScrollingList::ScrollingList( const ScrollingList &copy )
     : Component( copy )
     , horizontalScroll( copy.horizontalScroll )
@@ -82,12 +80,9 @@ ScrollingList::ScrollingList( const ScrollingList &copy )
     , layoutKey_( copy.layoutKey_ )
     , imageType_( copy.imageType_ )
 {
-
-
     setPoints( copy.scrollPoints_, copy.tweenPoints_ );
 
 }
-
 
 ScrollingList::~ScrollingList()
 {
@@ -132,7 +127,6 @@ void ScrollingList::selectItemByName(std::string_view name)
     }
 }
 
-
 std::string ScrollingList::getSelectedItemName()
 {
     size_t size = items_->size();
@@ -142,7 +136,6 @@ std::string ScrollingList::getSelectedItemName()
     return (*items_)[(itemIndex_ + selectedOffsetIndex_) % static_cast<int>(size)]->name;
 }
 
-
 unsigned int ScrollingList::loopIncrement(size_t offset, size_t index, size_t size) const
 {
     if (size == 0) return 0;
@@ -151,25 +144,19 @@ unsigned int ScrollingList::loopIncrement(size_t offset, size_t index, size_t si
 
 unsigned int ScrollingList::loopDecrement(size_t offset, size_t index, size_t size) const
 {
-    if (size == 0 || offset + size <= index) return 0;
-
-    return static_cast<unsigned int>((offset + size - index) % size);
+    if (size == 0) return 0;
+    return  static_cast<unsigned int>((static_cast<int>((offset % size) - (index % size)) + static_cast<int>(size)) % static_cast<int>(size));
 }
-
-
-
 
 void ScrollingList::setScrollAcceleration( float value )
 {
     scrollAcceleration_ = value;
 }
 
-
 void ScrollingList::setStartScrollTime( float value )
 {
     startScrollTime_ = value;
 }
-
 
 void ScrollingList::setMinScrollTime( float value )
 {
@@ -190,7 +177,6 @@ void ScrollingList::deallocateSpritePoints( )
         deallocateTexture( i );
     }
 }
-
 
 void ScrollingList::allocateSpritePoints()
 {
@@ -228,8 +214,6 @@ void ScrollingList::allocateSpritePoints()
     }
 }
 
-
-
 void ScrollingList::destroyItems()
 {
     size_t componentSize = components_.size();
@@ -245,7 +229,6 @@ void ScrollingList::destroyItems()
         }
     }
 }
-
 
 void ScrollingList::setPoints( std::vector<ViewInfo *> *scrollPoints, std::vector<AnimationEvents *> *tweenPoints )
 {
@@ -269,24 +252,20 @@ void ScrollingList::setPoints( std::vector<ViewInfo *> *scrollPoints, std::vecto
     }
 }
 
-
 unsigned int ScrollingList::getScrollOffsetIndex( ) const
 {
     return loopIncrement( itemIndex_, selectedOffsetIndex_, items_->size());
 }
-
 
 void ScrollingList::setScrollOffsetIndex( unsigned int index )
 {
     itemIndex_ = loopDecrement( index, selectedOffsetIndex_, items_->size());
 }
 
-
 void ScrollingList::setSelectedIndex( int selectedIndex )
 {
     selectedOffsetIndex_ = selectedIndex;
 }
-
 
 Item *ScrollingList::getItemByOffset(int offset)
 {
@@ -306,8 +285,6 @@ Item *ScrollingList::getItemByOffset(int offset)
     return (*items_)[index];
 }
 
-
-
 Item* ScrollingList::getSelectedItem()
 {
     size_t itemSize = items_->size();
@@ -315,7 +292,6 @@ Item* ScrollingList::getSelectedItem()
     
     return (*items_)[loopIncrement(itemIndex_, selectedOffsetIndex_, itemSize)];
 }
-
 
 void ScrollingList::pageUp()
 {
@@ -329,7 +305,6 @@ void ScrollingList::pageDown()
     itemIndex_ = loopIncrement(itemIndex_, components_.size(), items_->size());
 }
 
-
 void ScrollingList::random( )
 {
     size_t itemSize = items_->size();
@@ -337,18 +312,15 @@ void ScrollingList::random( )
     itemIndex_ = rand( ) % itemSize;
 }
 
-
 void ScrollingList::letterUp( )
 {
     letterChange( true );
 }
 
-
 void ScrollingList::letterDown( )
 {
     letterChange( false );
 }
-
 
 void ScrollingList::letterChange(bool increment)
 {
@@ -401,18 +373,15 @@ void ScrollingList::letterChange(bool increment)
     }
 }
 
-
 void ScrollingList::metaUp(const std::string& attribute)
 {
     metaChange(true, attribute);
 }
 
-
 void ScrollingList::metaDown(const std::string& attribute)
 {
     metaChange(false, attribute);
 }
-
 
 void ScrollingList::metaChange(bool increment, const std::string& attribute)
 {
@@ -459,7 +428,6 @@ void ScrollingList::metaChange(bool increment, const std::string& attribute)
         }
     }
 }
-
 
 void ScrollingList::subChange(bool increment)
 {
@@ -509,7 +477,6 @@ void ScrollingList::subChange(bool increment)
     }
 }
 
-
 void ScrollingList::cfwLetterSubUp()
 {
     if (Utils::toLower(collectionName) != (*items_)[(itemIndex_+selectedOffsetIndex_) % items_->size()]->collectionInfo->lowercaseName())
@@ -517,7 +484,6 @@ void ScrollingList::cfwLetterSubUp()
     else
         letterChange(true);
 }
-
 
 void ScrollingList::cfwLetterSubDown()
 {
@@ -541,7 +507,6 @@ void ScrollingList::cfwLetterSubDown()
     }
 }
 
-
 void ScrollingList::allocateGraphicsMemory( )
 {
     Component::allocateGraphicsMemory( );
@@ -549,7 +514,6 @@ void ScrollingList::allocateGraphicsMemory( )
 
     allocateSpritePoints( );
 }
-
 
 void ScrollingList::freeGraphicsMemory( )
 {
@@ -676,7 +640,6 @@ void ScrollingList::triggerEventOnAll(const std::string& event, int menuIndex)
     }
 }
 
-
 bool ScrollingList::update(float dt)
 {
     bool done = Component::update(dt);
@@ -701,14 +664,11 @@ bool ScrollingList::update(float dt)
     return done;
 }
 
-
-
 unsigned int ScrollingList::getSelectedIndex( ) const
 {
     if ( !items_ ) return 0;
     return loopIncrement( itemIndex_, selectedOffsetIndex_, items_->size( ) );
 }
-
 
 void ScrollingList::setSelectedIndex( unsigned int index )
 {
@@ -716,13 +676,11 @@ void ScrollingList::setSelectedIndex( unsigned int index )
      itemIndex_ = loopDecrement( index, selectedOffsetIndex_, items_->size( ) );
 }
 
-
 size_t ScrollingList::getSize() const
 {
     if ( !items_ ) return 0;
     return items_->size();
 }
-
 
 void ScrollingList::resetTweens( Component *c, AnimationEvents *sets, ViewInfo *currentViewInfo, ViewInfo *nextViewInfo, double scrollTime ) const
 {
@@ -736,7 +694,6 @@ void ScrollingList::resetTweens( Component *c, AnimationEvents *sets, ViewInfo *
     nextViewInfo->ImageHeight     = c->baseViewInfo.ImageHeight;
     nextViewInfo->ImageWidth      = c->baseViewInfo.ImageWidth;
     nextViewInfo->BackgroundAlpha = c->baseViewInfo.BackgroundAlpha;
-	
 
     c->setTweens(sets );
 
@@ -994,7 +951,6 @@ bool ScrollingList::allocateTexture( unsigned int index, const Item *item )
             }
         }
 
-
         // check collection path for art based on system name
         if ( !t )
         {
@@ -1060,7 +1016,6 @@ bool ScrollingList::allocateTexture( unsigned int index, const Item *item )
     return true;
 }
 
-
 void ScrollingList::buildPaths(std::string& imagePath, std::string& videoPath, const std::string& base, const std::string& subPath, const std::string& mediaType, const std::string& videoType) {
     imagePath = Utils::combinePath(base, subPath, "medium_artwork", mediaType);
     videoPath = Utils::combinePath(imagePath, "medium_artwork", videoType);
@@ -1082,7 +1037,6 @@ void ScrollingList::draw(  )
     // caller should instead call ScrollingList::Draw( unsigned int layer )
 }
 
-
 void ScrollingList::draw(unsigned int layer)
 {
     size_t componentSize = components_.size();
@@ -1095,7 +1049,6 @@ void ScrollingList::draw(unsigned int layer)
         if (c && c->baseViewInfo.Layer == layer) c->draw();
     }
 }
-
 
 bool ScrollingList::isIdle(  )
 {
@@ -1111,7 +1064,6 @@ bool ScrollingList::isIdle(  )
     return true;
 }
 
-
 bool ScrollingList::isAttractIdle(  )
 {
     size_t componentSize = components_.size();
@@ -1126,13 +1078,11 @@ bool ScrollingList::isAttractIdle(  )
     return true;
 }
 
-
 void ScrollingList::resetScrollPeriod(  )
 {
     scrollPeriod_ = startScrollTime_;
     return;
 }
-
 
 void ScrollingList::updateScrollPeriod(  )
 {
@@ -1142,7 +1092,6 @@ void ScrollingList::updateScrollPeriod(  )
         scrollPeriod_ = minScrollTime_;
     }
 }
-
 
 void ScrollingList::scroll(bool forward)
 {
@@ -1212,7 +1161,6 @@ void ScrollingList::scroll(bool forward)
 
     return;
 }
-
 
 bool ScrollingList::isPlaylist() const
 {
